					This will NOT break backwards compatibility, but you should use the new syntax whenever possible.
					For instance: a message like [importmidi (tracks2voices 1)] should be replaced by [importmidi @tracks2voices 1]. 


*****************
*** IMPORTANT ***
*****************

*** THESE CHANGES MIGHT BREAK COMPATIBILITY WITH OLDER PATCHES ***

- bach.urn. bach.wurn	IMPORTANT: Former @autoclear 2 (introduced in 0.7.9) is now @autoclear 3; @autoclear 2 has a similar yet different meaning. See bach.urn help file

- bach.norm		Now supports the @out attribute, as most other bach modules. 
				This means that by default now it outputs in native form! Check your patches...

- bach.histo		In-depth list handling has changed! 
				Now @maxdepth defines "how deep" the search should be, and no multiple collection is done.
			"Sym" is now the default and does not require the "sym" symbol any longer (also works on lllls)  

- bach.beatunbox	New @merge attribute added, patchers might behave slightly differently.
				Set @merge to "Always" to revert patchers to the "old" behavior
			Fixed wrong behavior with graphic extra and all-rests-measures

- bach.beatbox		Now outputs the "score" router symbol before the score llll.
				Nothing will change if you connected beatbox directly to a bach.score, but something might change if
				you did some low-level operations on the output lllls

- bach.circle, bach.tonnetz
			Old "velocityhandling" attribute is now called "showvelocity". This might change the display of your patches!

- bach.roll, bach.score	
			Old "velocityhandling" attribute is now called "showvelocity", but differently from bach.circle and bach.tonnetz,
				your patches should be automatically updated to the new attribute name. 
			@stemcolor, @flagcolor, @beamcolor, @tupletcolor, @restcolor, @keysigcolor,
				@accidentalcolor, @articulationcolor, @annotationcolor, @tempocolor: new attributes. 
				This might change the color aspect of your old patches.