@@ -692,7 +692,7 @@ long lexpr_eval_one(const t_lexpr_token *verb, t_hatom *h1, t_hatom *h2, t_hatom
 
 /*
  OPERATOR PRECEDENCE AND ORDER OF EVALUATION:
- 14	! ~ ++ -- + - * (type) sizeof right to left
+ 14	! ~ ++ -- + - (unary) * (type) sizeof right to left
  13	** right to left
  12	* / % // left to right
  11	+ - left to right
@@ -1517,7 +1517,7 @@ long lexpr_append_lexeme_LOGXOR(t_lexpr_lexeme *lex)
 long lexpr_append_lexeme_BITNOT(t_lexpr_lexeme *lex)
 {
     lex->l_type = L_TOKEN;
-    lex->l_precedence = 14;
+    lex->l_precedence = 13;
     lex->l_order = O_R2L;
     lex->l_token.t_type = TT_OP;
     lex->l_token.t_operands = 1;
@@ -1530,7 +1530,7 @@ long lexpr_append_lexeme_LOGNOT(t_lexpr_lexeme *lex)
     lex->l_type = L_TOKEN;
     lex->l_token.t_type = TT_OP;
     lex->l_token.t_operands = 1;
-    lex->l_precedence = 14;
+    lex->l_precedence = 13;
     lex->l_order = O_R2L;
     lex->l_token.t_contents.c_op.o_op = O_LOGNOT;
     return E_OK;
@@ -1673,7 +1673,7 @@ long lexpr_append_lexeme_POW(t_lexpr_lexeme *lex)
     lex->l_type = L_TOKEN;
     lex->l_token.t_type = TT_OP;
     lex->l_token.t_operands = 2;
-    lex->l_precedence = 13;
+    lex->l_precedence = 14;
     lex->l_order = O_L2R;
     lex->l_token.t_contents.c_op.o_properties = OP_NONE;
     lex->l_token.t_contents.c_op.o_op = O_POW;
@@ -1745,7 +1745,7 @@ long lexpr_append_lexeme_MINUS(t_lexpr_lexeme *lex)
 long lexpr_append_lexeme_UMINUS(t_lexpr_lexeme *lex)
 {
     lex->l_type = L_TOKEN;
-    lex->l_precedence = 14;
+    lex->l_precedence = 13;
     lex->l_order = O_R2L;
     lex->l_token.t_type = TT_OP;
     lex->l_token.t_operands = 1;
